--- a/Public/addD-manager.html
+++ b/Public/addD-manager.html
@@ -104,6 +104,7 @@
                             <ul class="fh5co-sub-menu">
                                 <li><a href="addD-Manager.html">Add Deal</a></li>
                                 <li><a href="DealsV-Manager.html">View Deals</a></li>
+                                <li><a href="Dealall.html">View all Deals</a></li>
                             </ul>
                         </li>
                         <li><a href="blog-Manager.html">Blog</a></li>
