--- a/Public/addA-Manager.html
+++ b/Public/addA-Manager.html
@@ -107,7 +107,6 @@
                             <ul class="fh5co-sub-menu">
                                 <li><a href="addD-Manager.html">Add Deal</a></li>
                                 <li><a href="DealsV-Manager.html">View Deals</a></li>
-                                <li><a href="Dealall.html">View all Deals</a></li>
                             </ul>
                         </li>
                         <li><a href="blog-Manager.html">Blog</a></li>
@@ -117,6 +116,13 @@
                             <ul class="fh5co-sub-menu">
                                 <li><a href="meetingA-Manager.html">Add</a></li>
                                 <li><a href="meetingV-Manager.html">View</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a>Reports</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="CustomerR.html">Customers</a></li>
+                                <li><a href="DealR.html">Deals</a></li>
                             </ul>
                         </li>
                     </ul>
