--- a/Public/DealsV-Manager.html
+++ b/Public/DealsV-Manager.html
@@ -230,6 +230,7 @@
                             <li><a href="DealR.html">Deals</a></li>
                         </ul>
                     </li>
+                    <li><a href="Dashbord.html">Dashbord</a></li>
                 </ul>
             </nav>
         </div>
