--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -95,6 +95,7 @@
 										<li><a href="DealR.html">Deals</a></li>
 									</ul>
 								</li>
+								<li><a href="Dashbord.html">Dashbord</a></li>
 							</ul>
 						</nav>
 					</div>
