--- a/Public/addA-Manager.html
+++ b/Public/addA-Manager.html
@@ -125,6 +125,7 @@
                                 <li><a href="DealR.html">Deals</a></li>
                             </ul>
                         </li>
+                        <li><a href="Dashbord.html">Dashbord</a></li>
                     </ul>
                 </nav>
             </div>
