--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -97,6 +97,14 @@
 										<li><a href="meetingV-Customer.html">View</a></li>
 									</ul>
 								</li>
+								<li>
+									<a>Reports</a>
+									<ul class="fh5co-sub-menu">
+										<li><a href="CustomerR.html">Customers</a></li>
+										<li><a href="DealR.html">Deals</a></li>
+									</ul>
+								</li>
+								<li><a href="Dashbord.html">Dashbord</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -154,6 +162,12 @@
 							<label for="email">Email:</label>
 							<input type="email" class="form-control" id="email" name="email" required>
 						</div>
+						<div class="form-group" style="display: none;">
+							<label for="joinDate">Join Date:</label>
+							<input type="text" class="form-control" id="joinDate" name="joinDate" value="" disabled>
+						</div>
+						
+						
 						<div class="form-group">
 							<label for="customerType">Customer Type:</label>
 							<select class="form-control" id="customerType" name="customerType" required>
@@ -251,6 +265,7 @@
 
 	<!-- jQuery -->
 	<script>
+		
 		document.addEventListener("DOMContentLoaded", function() {
     const username = sessionStorage.getItem('username');
     if (!username) {
@@ -269,6 +284,16 @@
 
         // Add UserName to the data object
         data['UserName'] = username;
+
+        // Add current month name to the data object
+		var currentDate = new Date();
+		var formattedDate = currentDate.toLocaleDateString('en-GB', {
+			day: 'numeric',
+			month: 'numeric',
+			year: 'numeric'
+		});
+
+		data['joinDate'] = formattedDate;
 
         console.log(data);
 
@@ -301,6 +326,8 @@
         });
     });
 });
+
+ 
 
 	  </script>
 	  
