--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -131,6 +131,7 @@
                                 <li><a href="DealR.html">Deals</a></li>
                             </ul>
                         </li>
+                        <li><a href="Dashbord.html">Dashbord</a></li>
                     </ul>
                 </nav>
             </div>
