--- a/Public/meetingA-Manager.html
+++ b/Public/meetingA-Manager.html
@@ -86,6 +86,7 @@
 								<li><a href="DealR.html">Deals</a></li>
 							</ul>
 						</li>
+						<li><a href="Dashbord.html">Dashbord</a></li>
 					</ul>
 				</nav>
 			</div>
