--- a/Public/updateA-Manager.html
+++ b/Public/updateA-Manager.html
@@ -119,6 +119,7 @@
                                 <li><a href="DealR.html">Deals</a></li>
                             </ul>
                         </li>
+                        <li><a href="Dashbord.html">Dashbord</a></li>
                     </ul>
                 </nav>
             </div>
