--- a/Public/users-Manager.html
+++ b/Public/users-Manager.html
@@ -203,6 +203,7 @@
                                 <ul class="fh5co-sub-menu">
                                     <li><a href="CustomerR.html">Customers</a></li>
                                     <li><a href="DealR.html">Deals</a></li>
+                                    <li><a href="AssetR.html">Assets</a></li>
                                 </ul>
                             </li>
                             <li><a href="Dashbord.html">Dashbord</a></li>
