--- a/Public/DealR.html
+++ b/Public/DealR.html
@@ -48,7 +48,7 @@
     width: 100%;
     border-collapse: collapse;
     font-size: 14px;
-    margin:auto;
+    margin-left:180px;
 }
 
 .my-table th, 
