--- a/Public/Dashbord.html
+++ b/Public/Dashbord.html
@@ -369,7 +369,6 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>Our Dashbord</h3>
 						</div>
 					</div>
 				</div>
@@ -736,8 +735,8 @@ document.addEventListener("DOMContentLoaded", function() {
                 datasets: [{
                     label: 'Deals per Month',
                     data: allMonths.map(month => countsByMonth[month]),
-                    backgroundColor: 'rgba(54, 162, 235, 0.5)',
-                    borderColor: 'rgba(54, 162, 235, 1)',
+                    backgroundColor: 'rgba(75, 192, 192, 0.5)',
+                    borderColor: 'rgb(75, 192, 192)',
                     borderWidth: 1
                 }]
             },
