--- a/Public/DealR.html
+++ b/Public/DealR.html
@@ -338,7 +338,7 @@
         // צור קישור להורדה
         const link = document.createElement('a');
         link.href = URL.createObjectURL(csvBlob);
-        link.setAttribute('download', 'deals.xlsx'); // שם הקובץ להורדה
+        link.setAttribute('download', 'deals.csv'); // שם הקובץ להורדה
         document.body.appendChild(link);
         link.click();
         document.body.removeChild(link);
