--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -51,9 +51,9 @@
 <style>
        .card {
 			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(320px, 10fr));
-			gap: 50px;
-			padding: 50px;
+			grid-template-columns: repeat(auto-fill, minmax(400px, 10fr));
+			gap: 70px;
+			padding: 70px;
 
 
 		}
@@ -544,7 +544,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 					<h2><i class="icon-bubble2"></i> <i class="comment">${feedback.Name}</i></h2>
 					<p class="date">${feedback.Date} <i class="far fa-calendar"></i></p>
 					<p>${feedback.FeedbackDesc}</p>
-					<p class="rating star-rating"></p>
+					<p class="rating star-rating"></p><br><br>
 				</div>
 			`;
 
