new-customer.html

--- a/Public/all-Customer.html
+++ b/Public/all-Customer.html
@@ -100,8 +100,7 @@ determine height */
     /* display: none; */ /* Initially hidden */
     position: fixed;
     bottom: 20px;
-    right: calc(20px + 160px); /* Adjust based on the width of the
-filter button */
+    right: calc(20px + 160px); /* Adjust based on the width of the filter button */
     z-index: 999;
     background-color:#de6277;
     color: white;
@@ -114,12 +113,12 @@ filter button */
 }
 
 #empty-assets-message {
-    font-family: 'Dancing Script', cursive;
-    font-size: 42px;
+    font-family: 'calibri', cursive;
+    font-size: 30px;
     color: #fff;
-    background-color: #ec336e;
+    background-color:#de6277;
     border: none;
-    padding: 40px;
+    padding: 20px;
     border-radius: 15px; /* Reduce border-radius for a smaller frame */
     text-align: center;
     margin-bottom: 30px;
@@ -249,7 +248,7 @@ filter button */
 
         <div id="filter-wrapper">
             <button id="all-assets-button" class="btn btn-primary btn-lg">All Assets</button>
-            <button id="filter-mobile-button" class="btn btn-pink btn-lg">Filter</button>
+            <button id="filter-mobile-button" class="btn btn-pink btn-lg">&nbsp;&nbsp;&nbsp;&nbsp;Filter&nbsp;&nbsp;&nbsp;&nbsp;</button>
         </div>
 
     <div id="fh5co-search-map">
