--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -311,7 +311,6 @@
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 								</li>
-								<li><a href="addC-Manager.html">Customer</a></li>
 								<!-- New "Deals" tab containing "Deal" and "Deals View" links -->
 								<li>
 									<a>Deals</a>
@@ -321,7 +320,14 @@
 									</ul>
 								</li>
 								<li><a href="blog-Manager.html">Blog</a></li>
-								<li><a href="users-Manager.html">Users</a></li>
+
+								<li>
+									<a>Manage</a>
+									<ul class="fh5co-sub-menu">
+										<li><a href="addC-Manager.html">Customer</a></li>
+										<li><a href="users-Manager.html">Users</a></li>
+									</ul>
+								</li>
 								<li>
 									<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
