--- a/Public/Dashbord.html
+++ b/Public/Dashbord.html
@@ -309,7 +309,6 @@
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
 								</li>
-								<li><a href="addC-Manager.html">Customer</a></li>
 								<!-- New "Deals" tab containing "Deal" and "Deals View" links -->
 								<li>
 									<a>Deals</a>
@@ -319,7 +318,14 @@
 									</ul>
 								</li>
 								<li><a href="blog-Manager.html">Blog</a></li>
-								<li><a href="users-Manager.html">Users</a></li>
+
+								<li>
+									<a>Manage</a>
+									<ul class="fh5co-sub-menu">
+										<li><a href="addC-Manager.html">Customer</a></li>
+										<li><a href="users-Manager.html">Users</a></li>
+									</ul>
+								</li>
 								<li>
 									<a>Meetings</a>
 									<ul class="fh5co-sub-menu">
@@ -335,7 +341,7 @@
 										<li><a href="AssetR.html">Assets</a></li>
 									</ul>
 								</li>
-                                <li><a href="Dashbord.html">Dashbord</a></li>
+								<li><a href="Dashbord.html">Dashbord</a></li>
 							</ul>
 						</nav>
 					</div>
