--- a/Public/updateA-Manager.html
+++ b/Public/updateA-Manager.html
@@ -94,7 +94,6 @@
                                 <li><a href="updateA-Manager.html">Update</a></li>
                             </ul>
                         </li>
-                        <li><a href="addC-Manager.html">Customer</a></li>
                         <!-- New "Deals" tab containing "Deal" and "Deals View" links -->
                         <li>
                             <a>Deals</a>
@@ -104,7 +103,14 @@
                             </ul>
                         </li>
                         <li><a href="blog-Manager.html">Blog</a></li>
-                        <li><a href="users-Manager.html">Users</a></li>
+
+                        <li>
+                            <a>Manage</a>
+                            <ul class="fh5co-sub-menu">
+                                <li><a href="addC-Manager.html">Customer</a></li>
+                                <li><a href="users-Manager.html">Users</a></li>
+                            </ul>
+                        </li>
                         <li>
                             <a>Meetings</a>
                             <ul class="fh5co-sub-menu">
@@ -117,6 +123,7 @@
                             <ul class="fh5co-sub-menu">
                                 <li><a href="CustomerR.html">Customers</a></li>
                                 <li><a href="DealR.html">Deals</a></li>
+                                <li><a href="AssetR.html">Assets</a></li>
                             </ul>
                         </li>
                         <li><a href="Dashbord.html">Dashbord</a></li>
