--- a/Public/updateC-Manager.html
+++ b/Public/updateC-Manager.html
@@ -86,14 +86,10 @@
 								<a>Assets</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="all-Manager.html">All</a></li>
-									<li><a href="filter-Manager.html">Filter</a></li>
 									<li><a href="addA-Manager.html">Add</a></li>
 									<li><a href="updateA-Manager.html">Update</a></li>
 								</ul>
 							</li>
-							<li><a href="users-Manager.html">Users</a></li>
-							<li><a href="addC-Manager.html">Customer</a></li>
-							<li><a href="blog-Manager.html">Blog</a></li>
 							<!-- New "Deals" tab containing "Deal" and "Deals View" links -->
 							<li>
 								<a>Deals</a>
@@ -102,7 +98,15 @@
 									<li><a href="DealsV-Manager.html">View Deals</a></li>
 								</ul>
 							</li>
-							<!-- End of "Deals" tab -->
+							<li><a href="blog-Manager.html">Blog</a></li>
+
+							<li>
+								<a>Manage</a>
+								<ul class="fh5co-sub-menu">
+									<li><a href="addC-Manager.html">Customer</a></li>
+									<li><a href="users-Manager.html">Users</a></li>
+								</ul>
+							</li>
 							<li>
 								<a>Meetings</a>
 								<ul class="fh5co-sub-menu">
@@ -115,6 +119,7 @@
 								<ul class="fh5co-sub-menu">
 									<li><a href="CustomerR.html">Customers</a></li>
 									<li><a href="DealR.html">Deals</a></li>
+									<li><a href="AssetR.html">Assets</a></li>
 								</ul>
 							</li>
 							<li><a href="Dashbord.html">Dashbord</a></li>
