Description of your changes

--- a/Public/addC-Customer.html
+++ b/Public/addC-Customer.html
@@ -169,9 +169,9 @@
 								<option value="Renting">Renting</option>
 							</select>
 						</div>
-						<button type="submit" class="btn btn-primary" id="sub">Submit</button>
+						<button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br>
 						<div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
-							Customer added successfully!
+							You are successfully added as a customer!
 						</div>
 						<div id="errorMessage" style="display: none;" class="alert alert-danger" role="alert">
 							The ID you entered already exists.
