--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -374,40 +374,33 @@
 });
 
 
-        const deleteMeeting = (meetingId) => {
-            fetch(`/meeting/${meetingId}`, {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    // If deletion is successful, show a success alert to the user
-                    alert('Meeting deleted successfully!');
-                    // If deletion is successful, remove the element from the page
-                    const meetingElement = document.getElementById(meetingId);
-                    if (meetingElement) {
-                        meetingElement.remove();
-                        // Wait for 5 seconds before reloading the page
-                        setTimeout(() => {
-                            window.location.reload();
-                        }, 5000);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error deleting meeting:', error);
-                    // Handle the error and show an error alert to the user
-                    alert('An error occurred while deleting the meeting. Please try again later.');
-                });
-        };
-
-
-
-
-
+const deleteMeeting = (meetingId) => {
+    fetch(`/meeting/${meetingId}`, {
+        method: 'DELETE',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        // If deletion is successful, show a success alert to the user
+        alert('Meeting deleted successfully!');
+        // If deletion is successful, remove the element from the page
+        const meetingElement = document.getElementById(meetingId);
+        if (meetingElement) {
+            meetingElement.remove();
+        }
+        // Reload the page immediately after deletion
+        window.location.reload();
+    })
+    .catch(error => {
+        console.error('Error deleting meeting:', error);
+        // Handle the error and show an error alert to the user
+        alert('An error occurred while deleting the meeting. Please try again later.');
+    });
+};
 
 
     </script>
