--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -357,7 +357,7 @@
                     <h4>${meeting.MeetingType}</h4><br><br>
                     <i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
                     <i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
-                    <i class="fas fa-user"></i> &nbsp;&nbsp;Customer Number: ${meeting.CustomerID}</p><br>
+                    <i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
                     ${meeting.AssetSelect ? `<i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect} <br><br>` : ''}
                     <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
                 `;
