--- a/Public/all-Manager.html
+++ b/Public/all-Manager.html
@@ -288,7 +288,7 @@
         const imageUrl = asset.AssetImage;
         const status = asset.AssetStatus;
         const streetAndRooms = `Address: ${asset.AssetStreet} ${asset.AssetStreetNumber} ${asset.AssetCity}`; 
-        const Description = `Description: ${asset.assetDescription}`; 
+        const Description = `Description: ${asset.AssetDescription}`; 
 
         assetDiv.innerHTML = `
             <div class="property">
