--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -113,70 +113,58 @@
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
 				<ul class="slides">
-			   	<li style="background-image: url(images/col.png);">
+					<li style="background-image: url(images/Tre.png);">
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-md-4 col-md-offset-4 col-md-pull-4 js-fullheight slider-text">
+									<div class="slider-text-inner">
+									 <div class="desc">
+										 <h1>Hello Gil Nissim!<br> Have a good day</h1>
+										  <h2 class="price">Choose the relevant action</h2>
+										  <p class="details">
+											  <span>Meetin Managemen</span>
+											  <span>Client Management</span>
+											  <span>Property Management</span>
+										  </p>
+									 </div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+			   	<li style="background-image: url(images/Two.png);">
 			   		<div class="container-fluid">
 			   			<div class="row">
 				   			<div class="col-md-4 col-md-offset-4 col-md-pull-4 js-fullheight slider-text">
 				   				<div class="slider-text-inner">
 				   					<div class="desc">
-				   						<span class="status">Sale</span>
-				   						<h1>New House in Canada, UK</h1>
-											<h2 class="price">$4,000.00</h2>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				   						<h1>Hello Gil Nissim!<br> Have a good day</h1>
+											<h2 class="price">Choose the relevant action</h2>
 											<p class="details">
-												<span>2000 ft sq</span>
-												<span>4 Bedrooms</span>
-												<span>3 Bathrooms</span>
-												<span>2 Garage</span>
+												<span>Graphs of Activity Curves</span>
+												<span>Recorded Reports</span>
 											</p>
-											<p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>
 				   					</div>
 				   				</div>
 				   			</div>
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/lol.png);">
+			   
+			   	<li style="background-image: url(images/g.png);">
 			   		<div class="container-fluid">
 			   			<div class="row">
 				   			<div class="col-md-4 col-md-offset-4 col-md-pull-4 js-fullheight slider-text">
 				   				<div class="slider-text-inner">
-				   					<div class="desc">
-				   						<span class="status">Rent</span>
-				   						<h1>New House in Canada, UK</h1>
-											<h2 class="price">$2000/mos</h2>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-											<p class="details">
-												<span>2000 ft sq</span>
-												<span>4 Bedrooms</span>
-												<span>3 Bathrooms</span>
-												<span>2 Garage</span>
-											</p>
-											<p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>
-				   					</div>
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			   	<li style="background-image: url(images/mol.png);">
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-4 col-md-offset-4 col-md-pull-4 js-fullheight slider-text">
-				   				<div class="slider-text-inner">
-				   					<div class="desc">
-				   						<span class="status">Sale</span>
-				   						<h1>New House in Canada, UK</h1>
-											<h2 class="price">$4,000.00</h2>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-											<p class="details">
-												<span>2000 ft sq</span>
-												<span>4 Bedrooms</span>
-												<span>3 Bathrooms</span>
-												<span>2 Garage</span>
-											</p>
-											<p><a class="btn btn-primary btn-lg" href="#">Learn More</a></p>
-				   					</div>
+									<div class="desc">
+										<h1>Hello Gil Nissim!<br> Have a good day</h1>
+										 <h2 class="price">Choose the relevant action</h2>
+										 <p class="details">
+											 <span>Transaction Management</span>
+											 <span>User Management</span>
+											 <span>Feedbacks</span>
+										 </p>
+									</div>
 				   				</div>
 				   			</div>
 				   		</div>
