--- a/Public/Home.html
+++ b/Public/Home.html
@@ -271,7 +271,7 @@
 						<div class="box-testimony animate-box">
 							<blockquote>
 								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;I couldn't be happier with the seamless process of buying our dream home through Heh B'iyar. From start to finish, their team was incredibly attentive and made sure every detail was taken care of.&rdquo;</p>
 							</blockquote>
 							<p class="author">Eric Lieberman</p>
 						</div>
@@ -281,9 +281,9 @@
 						<div class="box-testimony animate-box">
 							<blockquote>
 								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.&rdquo;</p>
+								<p>&ldquo;Choosing B'iyar Real Estate was the best decision we made when selling our property. Their strategic approach, attention to detail, and market knowledge resulted in a quick sale at a great price. We couldn't be happier with the outcome!&rdquo;</p>
 							</blockquote>
-							<p class="author">Tomer Shalom</p>
+							<p class="author">Dean Tzur</p>
 						</div>
 						
 						
@@ -292,7 +292,7 @@
 						<div class="box-testimony animate-box">
 							<blockquote>
 								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;B'iyar Real Estate truly cares about their clients. From the first meeting to the closing day, they were there for us every step of the way, providing valuable guidance and support. We're thrilled with our new home and grateful for B'iyar's exceptional service!&rdquo;</p>
 							</blockquote>
 							<p class="author">Shani Bin Nun</p>
 						</div>
