--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -316,7 +316,7 @@
 								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
 								<p>&ldquo;I couldn't be happier with the seamless process of buying our dream home through Heh B'iyar. From start to finish, their team was incredibly attentive and made sure every detail was taken care of.&rdquo;</p>
 							</blockquote>
-							<p class="author">Noa Levi</p>
+							<p class="author">Eric Lieberman</p>
 						</div>
 						
 					</div>
@@ -337,7 +337,7 @@
 								<span class="quote"><span><i class="icon-quotes-right"></i></span></span>
 								<p>&ldquo;B'iyar Real Estate truly cares about their clients. From the first meeting to the closing day, they were there for us every step of the way, providing valuable guidance and support. We're thrilled with our new home and grateful for B'iyar's exceptional service!&rdquo;</p>
 							</blockquote>
-							<p class="author">Meitar Sadeh</p>
+							<p class="author">Shani Bin Nun</p>
 						</div>
 						
 					</div>
