--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -25,7 +25,7 @@
 	<style>
 		.customer-card {
 
-			max-width: 300px;
+			
 			background-color: #ffffff;
 			border-radius: 10px;
 			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -502,49 +502,86 @@
     // הוספת אירוע לחיצה על כפתור הסינון
     filterBtn.addEventListener("click", function () {
         var customerIDFilter = document.getElementById("customerIDFilter").value;
-        // קריאה לפונקציה שתבצע את הסינון
-        filterCustomers(customerIDFilter);
-    });
-});
-
-document.addEventListener("DOMContentLoaded", function () {
-        var filterBtn = document.getElementById("filterBtn");
-        filterBtn.addEventListener("click", function () {
-            var customerIDFilter = document.getElementById("customerIDFilter").value;
+        // אם לא נבחר כלום בתיבת הסינון, נציג את כל הלקוחות
+        if (!customerIDFilter) {
+            showAllCustomers();
+        } else {
+            // קריאה לפונקציה שתבצע את הסינון
             filterCustomers(customerIDFilter);
-        });
+        }
     });
 
+    // פונקציה להצגת כל הלקוחות
+    function showAllCustomers() {
+        fetch("/getCustomers")
+        .then(response => response.json())
+        .then(data => {
+            // הצגת כל הלקוחות
+            displayCustomers(data);
+        })
+        .catch(error => {
+            console.error('Error fetching all customers:', error);
+        });
+    }
+
+    // פונקציה לסינון לקוחות לפי ID
     function filterCustomers(customerIDFilter) {
         fetch(`/getCustomerID?customerID=${customerIDFilter}`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error("Network response was not ok");
-                }
-                return response.json();
-            })
-			.then(data => {
-    console.log(data); // בדיקה של הנתונים המתקבלים
-    const customersList = document.getElementById("customersList");
-    customersList.innerHTML = ""; // ניקוי הרשימה לפני הוספת הפריטים המסוננים
-    const customerElement = document.createElement("div");
-    customerElement.classList.add('customer-row');
-    customerElement.innerHTML = `
-        <div class="customer-card">
-            <img src="https://as1.ftcdn.net/jpg/05/53/79/60/220_F_553796090_XHrE6R9jwmBJUMo9HKl41hyHJ5gqt9oz.jpg" alt="User Avatar">
-            <p>Customer ID: ${data.CustomerID}</p>
-            <p>Name: ${data.FullName}</p>
-            <p>Phone: ${data.Phone}</p>
-            <p>Email: ${data.Email}</p>
-            <p>Type: ${data.CustomerType}</p>
-            <hr>
-        </div>
-    `;
-    customersList.appendChild(customerElement);
-})
-
-            .catch(error => console.error("Error:", error));
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Network response was not ok");
+            }
+            return response.json();
+        })
+        .then(data => {
+            // בדיקה של הנתונים המתקבלים
+            console.log(data);
+            const customersList = document.getElementById("customersList");
+            customersList.innerHTML = ""; // ניקוי הרשימה לפני הוספת הפריטים המסוננים
+            
+            const customerElement = document.createElement("div");
+            customerElement.classList.add('customer-row');
+            customerElement.innerHTML = `
+                <div class="customer-card">
+                    <img src="https://as1.ftcdn.net/jpg/05/53/79/60/220_F_553796090_XHrE6R9jwmBJUMo9HKl41hyHJ5gqt9oz.jpg" alt="User Avatar">
+                    <p>Customer ID: ${data.CustomerID}</p>
+                    <p>Name: ${data.FullName}</p>
+                    <p>Phone: ${data.Phone}</p>
+                    <p>Email: ${data.Email}</p>
+                    <p>Type: ${data.CustomerType}</p>
+                    <hr>
+                </div>
+            `;
+            customersList.appendChild(customerElement);
+        })
+        .catch(error => console.error("Error:", error));
     }
+
+    // פונקציה להצגת הלקוחות ב-DOM (לדוגמה)
+    function displayCustomers(customers) {
+        const customersList = document.getElementById("customersList");
+        customersList.innerHTML = ""; // ניקוי הרשימה הקיימת
+        
+        customers.forEach(customer => {
+            const customerElement = document.createElement("div");
+            customerElement.classList.add('customer-row');
+            customerElement.innerHTML = `
+                <div class="customer-card">
+                    <img src="https://as1.ftcdn.net/jpg/05/53/79/60/220_F_553796090_XHrE6R9jwmBJUMo9HKl41hyHJ5gqt9oz.jpg" alt="User Avatar">
+                    <p>Customer ID: ${customer.CustomerID}</p>
+                    <p>Name: ${customer.FullName}</p>
+                    <p>Phone: ${customer.Phone}</p>
+                    <p>Email: ${customer.Email}</p>
+                    <p>Type: ${customer.CustomerType}</p>
+                    <hr>
+                </div>
+            `;
+            customersList.appendChild(customerElement);
+        });
+    }
+});
+
+ 
 
 
 
