Description of your changes

--- a/Public/addA-Manager.html
+++ b/Public/addA-Manager.html
@@ -212,7 +212,7 @@
                     <label for="assetImage">Image URL:</label>
                     <input type="text" class="form-control" id="assetImage" name="assetImage" required>
                 </div> <br>
-                <button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br><br><br>
+                <button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br>
                 <div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
                     Asset added successfully!
                 </div>
