--- a/Public/addC-Manager.html
+++ b/Public/addC-Manager.html
@@ -316,7 +316,7 @@
 								<option value="Renting">Renting</option>
 							</select>
 						</div>
-						<button type="submit" class="btn btn-primary" id="sub">Submit</button>
+						<button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br>
 						<div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
 							Customer added successfully!
 						</div>
