--- a/Public/addD-manager.html
+++ b/Public/addD-manager.html
@@ -171,7 +171,7 @@
                 </div>
             
                 <br>
-                <button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br><br><br>
+                <button type="submit" class="btn btn-primary" id="sub">Submit</button><br><br>
                 <div id="successMessage" style="display: none;" class="alert alert-success" role="alert">
                     Deals added successfully!
                 </div>
