--- a/Public/updateA-Manager.html
+++ b/Public/updateA-Manager.html
@@ -175,7 +175,7 @@
                     <label for="assetPrice">Price:</label>
                     <input type="text" class="form-control" id="assetPrice2" name="assetPrice" required>
                 </div>
-                <button type="submit" class="btn btn-primary" id="sub">Submit</button>
+                <button type="submit" class="btn btn-primary" id="sub">Submit</button><br></br>
                 <div id="successMessage2" style="display: none;" class="alert alert-success" role="alert">
                     Asset updated successfully!
                 </div>
