Description of your changes

--- a/Public/all-Customer.html
+++ b/Public/all-Customer.html
@@ -264,8 +264,8 @@ determine height */
                                 <label for="asset-type-select">Asset Type:</label>
                                 <select id="asset-type-select" class="cs-select cs-skin-border">
                                     <option value="" selected>Any</option> <!-- Neutral option -->
-                                    <option value="Rent">Rent</option>
-                                    <option value="Sale">Sale</option>
+                                    <option value="Rent" selected>Rent</option>
+                                    <option value="Sale"selected>Sale</option>
                                 </select>
 
                             </section>
